# article-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml  lefthook.yml  osv-scanner.toml  pyproject.toml
.agent/rules/: language.md
docs/: design.md  implementation_plan.md  requirements.md  tech_stack.md  traceability.md
prompts/: spec_generator.md  structure_generator.md  writing_generator.md
src/: app.py  config.py  graph.py  state.py
src/agents/: common.py  spec.py  structure.py  writing.py
src/utils/: prompts.py
tests/: conftest.py  test_app.py  test_requirements.py  test_spec_agent.py  test_structure_agent.py  test_writing_agent.py
