[project]
name = "article-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.3",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-engineio<4.11.0",
]

[dependency-groups]
dev = [
    "lefthook>=2.0.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "mypy==1.13.0",
]
